// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`blank renders a blank option 1`] = `
<div>
  <div
    class="dropdown"
  >
    <div
      aria-controls="id_listbox"
      class="dropdown__combobox"
      id="id"
      role="combobox"
      tabindex="0"
    >
      Please select…
    </div>
    <ul
      class="dropdown__listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        class="dropdown__option"
        id="id_option_blank"
        role="option"
        tabindex="-1"
      >
        Please select…
      </li>
      <li
        class="dropdown__option"
        id="id_option_apple"
        role="option"
        tabindex="-1"
      >
        Apple
      </li>
      <li
        class="dropdown__option"
        id="id_option_banana"
        role="option"
        tabindex="-1"
      >
        Banana
      </li>
      <li
        class="dropdown__option"
        id="id_option_orange"
        role="option"
        tabindex="-1"
      >
        Orange
      </li>
    </ul>
  </div>
</div>
`;

exports[`options as array of objects disabled sets the aria-disabled attribute 1`] = `
<div>
  <div
    class="dropdown"
  >
    <div
      aria-activedescendant="id_option_apple"
      aria-controls="id_listbox"
      aria-expanded="true"
      class="dropdown__combobox"
      id="id"
      role="combobox"
      tabindex="0"
    >
      Apple
    </div>
    <ul
      class="dropdown__listbox"
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        aria-selected="true"
        class="dropdown__option dropdown__option--focused"
        id="id_option_apple"
        role="option"
        tabindex="-1"
      >
        Apple
      </li>
      <li
        aria-disabled="true"
        class="dropdown__option"
        id="id_option_banana"
        role="option"
        tabindex="-1"
      >
        Banana
      </li>
    </ul>
  </div>
</div>
`;

exports[`options as array of objects group renders grouped options 1`] = `
<div>
  <div
    class="dropdown"
  >
    <div
      aria-controls="id_listbox"
      class="dropdown__combobox"
      id="id"
      role="combobox"
      tabindex="0"
    >
      Apple
    </div>
    <ul
      class="dropdown__listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        class="dropdown__option"
        id="id_option_apple"
        role="option"
        tabindex="-1"
      >
        Apple
      </li>
      <li
        aria-disabled="true"
        class="dropdown__group"
        id="id_group_citrus"
        role="option"
        tabindex="-1"
      >
        Citrus
      </li>
      <li
        class="dropdown__option dropdown__option--grouped"
        id="id_option_orange"
        role="option"
        tabindex="-1"
      >
        Orange
      </li>
      <li
        class="dropdown__option dropdown__option--grouped"
        id="id_option_lemon"
        role="option"
        tabindex="-1"
      >
        Lemon
      </li>
      <li
        aria-disabled="true"
        class="dropdown__group"
        id="id_group_berry"
        role="option"
        tabindex="-1"
      >
        Berry
      </li>
      <li
        class="dropdown__option dropdown__option--grouped"
        id="id_option_raspberry"
        role="option"
        tabindex="-1"
      >
        Raspberry
      </li>
      <li
        class="dropdown__option dropdown__option--grouped"
        id="id_option_strawberry"
        role="option"
        tabindex="-1"
      >
        Strawberry
      </li>
    </ul>
  </div>
</div>
`;

exports[`options as array of objects label renders a closed drop down 1`] = `
<div>
  <div
    class="dropdown"
  >
    <div
      aria-controls="id_listbox"
      class="dropdown__combobox"
      id="id"
      role="combobox"
      tabindex="0"
    >
      Apple
    </div>
    <ul
      class="dropdown__listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        class="dropdown__option"
        id="id_option_apple"
        role="option"
        tabindex="-1"
      >
        Apple
      </li>
      <li
        class="dropdown__option"
        id="id_option_banana"
        role="option"
        tabindex="-1"
      >
        Banana
      </li>
      <li
        class="dropdown__option"
        id="id_option_orange"
        role="option"
        tabindex="-1"
      >
        Orange
      </li>
    </ul>
  </div>
</div>
`;

exports[`options empty options renders an empty combo box 1`] = `
<div>
  <div
    class="dropdown"
  >
    <div
      aria-controls="id_listbox"
      class="dropdown__combobox"
      id="id"
      role="combobox"
      tabindex="0"
    />
    <ul
      class="dropdown__listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`options options as array of numbers renders a closed drop down 1`] = `
<div>
  <div
    class="dropdown"
  >
    <div
      aria-controls="id_listbox"
      class="dropdown__combobox"
      id="id"
      role="combobox"
      tabindex="0"
    >
      1
    </div>
    <ul
      class="dropdown__listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        class="dropdown__option"
        id="id_option_1"
        role="option"
        tabindex="-1"
      >
        1
      </li>
      <li
        class="dropdown__option"
        id="id_option_2"
        role="option"
        tabindex="-1"
      >
        2
      </li>
      <li
        class="dropdown__option"
        id="id_option_3"
        role="option"
        tabindex="-1"
      >
        3
      </li>
    </ul>
  </div>
</div>
`;

exports[`options options as array of strings renders a closed drop down 1`] = `
<div>
  <div
    class="dropdown"
  >
    <div
      aria-controls="id_listbox"
      class="dropdown__combobox"
      id="id"
      role="combobox"
      tabindex="0"
    >
      Apple
    </div>
    <ul
      class="dropdown__listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        class="dropdown__option"
        id="id_option_apple"
        role="option"
        tabindex="-1"
      >
        Apple
      </li>
      <li
        class="dropdown__option"
        id="id_option_banana"
        role="option"
        tabindex="-1"
      >
        Banana
      </li>
      <li
        class="dropdown__option"
        id="id_option_orange"
        role="option"
        tabindex="-1"
      >
        Orange
      </li>
    </ul>
  </div>
</div>
`;

exports[`options updating options updates the options 1`] = `
<div>
  <div
    class="dropdown"
  >
    <div
      aria-activedescendant="id_option_strawberry"
      aria-controls="id_listbox"
      aria-expanded="true"
      class="dropdown__combobox"
      id="id"
      role="combobox"
      tabindex="0"
    >
      Strawberry
    </div>
    <ul
      class="dropdown__listbox"
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        aria-selected="true"
        class="dropdown__option dropdown__option--focused"
        id="id_option_strawberry"
        role="option"
        tabindex="-1"
      >
        Strawberry
      </li>
      <li
        class="dropdown__option"
        id="id_option_raspberry"
        role="option"
        tabindex="-1"
      >
        Raspberry
      </li>
      <li
        class="dropdown__option"
        id="id_option_banana"
        role="option"
        tabindex="-1"
      >
        Banana
      </li>
    </ul>
  </div>
</div>
`;
